tests/expectations/compiler/dynamic_dispatch/dynamic_call_future_in_tuple_return_fail.out
Error [ETYC0372178]: The `Final` `f` returned by `_dynamic_call` must be consumed by a `final { }` block.
    --> compiler-test:6:24
     |
   6 |         return (42u64, f);
     |                        ^
     |
     = Wrap the dynamic call result in a `final { }` block, e.g. `return final { name.run(); };`.
